--- a/css/estilos.css
+++ b/css/estilos.css
@@ -367,6 +367,63 @@ footer{
     color: white;
 }
 
+:root{
+    --facebook: #3b5999;
+    --twitter: #1d9bf0;
+    --linkedin: #0077B5;
+    --whatsapp: #10a210;
+}
+
+.redes-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.redes-container ul li{
+    display: inline-block;
+    margin: 0 5px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+}
+
+.redes-container ul li a{
+    display: block;
+    padding: 0 10px;
+    background: #333;
+    color: #fff;
+    line-height: 40px;
+    font-size: 18px;
+    box-shadow: 0 3px 5px 0px rgba(0, 0, 0, .2);
+    transition: .2s;
+}
+
+.redes-container ul:hover a{
+    filter: blur(2px);
+}
+
+.redes-container ul li a:hover{
+    transform: translateY(-3px) scale(1.05);
+    box-shadow: 0 5px 5px 0px rgba(0, 0, 0, .2);
+    filter: none;    
+}
+
+.redes-container ul li .facebook:hover{
+    background: var(--facebook);
+}
+
+.redes-container ul li .linkedin:hover{
+    background: var(--linkedin);
+}
+
+.redes-container ul li .twitter:hover{
+    background: var(--twitter);
+}
+
+.redes-container ul li .whatsapp:hover{
+    background: var(--whatsapp);
+}
 
 /* RESPONSIVE MOBILE FIRST */
 
