--- a/css/estilos.css
+++ b/css/estilos.css
@@ -207,6 +207,14 @@ h2{
     color: #e0dac6;
 }
 
+.articuloNoticia{
+        display: -webkit-box;
+        overflow: hidden;
+        -webkit-line-clamp: 8;
+        -webkit-box-orient: vertical;
+        text-align: justify;
+}
+
 .suscribirse{
     background-color: #e0dac6;
     padding: 20px;
