--- a/css/estilos.css
+++ b/css/estilos.css
@@ -447,3 +447,8 @@ footer{
     
     }
 
+@media only screen and (min-width: 990px){
+        .logoLg{width: 500px}
+        .logoLg{height: 121px}
+}
+
