--- a/css/estilos.css
+++ b/css/estilos.css
@@ -169,9 +169,9 @@ h2{
 }
 
 .leerMas:hover{
-    background-color: rgb(199, 190, 190);
-    color: #0f2027;
-    transition: all 800ms;
+    background-color: #134155;
+    transition: all 500ms;
+    cursor: pointer;
 }
 
 .fotoNoticia{
@@ -236,7 +236,7 @@ h2{
 }
 
 .linea{
-    height: 5px;
+    height: 6px;
     background: #0f2027;
 }
 
@@ -244,14 +244,23 @@ h2{
     display: flex;
     height: 2px;
     background: #e0dac6;
-    align-items: flex-end;
-    align-self: flex-end;
+    align-items: center;
+    align-self: center;
 }
 
-.tituloClientes{
+.tituloGaramond{
+    font-size: 30px;
     font-family: 'EB Garamond', serif;
     font-weight: 700;
     color: #0f2027;
+}
+
+.tituloEstadistica{
+    font-size: 40px;
+    font-family: 'EB Garamond', serif;
+    font-weight: 700;
+    color: #0f2027;
+    padding: 0 10px 0 0;
 }
 
 /* NOSOTROS */
@@ -515,3 +524,19 @@ footer{
     margin: 0 45px;
     }
 
+@media (max-width: 375px) {
+    .articuloInferior {margin: 10px 0;}
+}
+
+@media (max-width: 375px) {
+    #carouselExampleCaptions {padding-top: 10px;}
+    .carousel-caption { height: auto;
+                        width: auto;
+                        padding: 10px;
+                        text-align: center;
+                        display: flex;
+                        align-self: center;
+                        align-content: center;
+                        }
+
+}
