--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,12 +9,13 @@ header{
 
 .logo{ 
     text-align: center;
-    /* display: inline-block;
-    display: flex; */
+    display: inline-block;
+    display: flex;
     justify-content: center;
-    /* grid-area: logo;
-    padding: 5px 0px 5px 20px; */
+    padding: 10px 0;
 }
+
+
 
 .estudioFM{
     grid-area: estudioFM;
@@ -437,8 +438,23 @@ footer{
     margin: 0px;
 }
 
+/* .estudioFLfooter{
+    font-family: 'EB Garamond', serif;
+    font-weight: 500;
+} */
+
+.derechosReservados{
+    font-family: 'Raleway', sans-serif;
+    
+}
+
 .text-white{
     color: white;
+    font-family: 'Raleway', sans-serif;
+}
+
+.text-white:hover{
+    color: grey;
 }
 
 :root{
@@ -515,8 +531,13 @@ footer{
     }
 
 @media only screen and (min-width: 990px){
-    .logoLg{width: 500px}
-    .logoLg{height: 121px}
+    .logoLg{width: auto}
+    .logoLg{height: 120px}
+}
+
+@media only screen and (max-width: 375px){
+    .logoLg{width: auto}
+    .logoLg{height: 100px}
 }
 
 @media (max-width: 767px) {
