--- a/css/estilos.css
+++ b/css/estilos.css
@@ -438,27 +438,53 @@ footer{
     margin: 0px;
 }
 
-/* .estudioFLfooter{
-    font-family: 'EB Garamond', serif;
-    font-weight: 500;
-} */
+.linea3{
+    display: flex;
+    height: 2px;
+    background: #e0dac6;
+    align-items: center;
+    align-self: center;
+    margin: 15px 0;
+}
 
 .derechosReservados{
     font-family: 'Raleway', sans-serif;
     
 }
 
-.text-white{
-    color: white;
-    font-family: 'Raleway', sans-serif;
+.logoFooter{
+    height: 40px;
+    width: auto;
 }
 
-.text-white:hover{
-    color: grey;
+.mapaSitio{
+    color: white;
+    font-size: 16px;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+}
+
+.mapaSitio li {
+    display: inline-block;
+    position: relative;
+    /* padding: 0 15px; */
+}
+.mapaSitio ul {
+    position: absolute;
+    display: none;
+}
+
+.mapaSitio ul li {
+    display: block;
+    width: 150px;
+}
+
+.mapaSitio:hover{
+    color: rgb(165, 160, 160);
 }
 
 :root{
-    --facebook: #3b5999;
+    --facebook: #5e6d8b;
     --twitter: #1d9bf0;
     --linkedin: #0077B5;
     --whatsapp: #10a210;
@@ -532,7 +558,7 @@ footer{
 
 @media only screen and (min-width: 990px){
     .logoLg{width: auto}
-    .logoLg{height: 120px}
+    .logoLg{height: 140px}
 }
 
 @media only screen and (max-width: 375px){
@@ -560,4 +586,12 @@ footer{
                         align-content: center;
                         }
 
+}
+
+@media only screen and (max-width: 375px){
+    footer{     text-align: center;
+                justify-items: center;
+                justify-content: center;
+                justify-self: center;
+    }
 }
