--- a/css/estilos.css
+++ b/css/estilos.css
@@ -112,8 +112,10 @@ h2{
 
 .tituloAzul{
     color: rgb(3, 3, 59);
-    font-family: 'Raleway', sans-serif;
-    font-weight: bold;
+    font-family: 'EB Garamond', serif;
+    font-weight: 700;
+    text-align: left;
+    font-size: 38px;
 }
 
 .parrafoGris{
