--- a/css/estilos.css
+++ b/css/estilos.css
@@ -464,6 +464,21 @@ h2{
 
 /* CONTACTO */
 
+.encabezadoContacto{
+    background-image: url("../multimedia/fondos/contacto.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 220px;
+    width: auto;
+    display: flex;
+    justify-self: center;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+}
+
 form{
     color: #131b23;
 }
